# MPGDsim

./: .gitignore  README.md
Batch/: submit_mmg.sh  submit_test.sh
Data/Comsol/Collection_Efficiency_Studies/: field_swipe_separator.sh
Garfield/MMG_Comsol/: CMakeLists.txt  MMG.C  MMG_single.C  eColl.txt
